--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,16 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Swinglifestyle</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+    <h2 text-center>The Swingers Next Door</h2>
+    <p>
+        You probably see a swinger everyday, only you don't see them. Chances are that your neighbor, an associate at work or even a family member is a swinger. The sexually free are found in every community, and within every demographic. The LifeStyle is growing
+        and reaching new levels all the time.
+    </p>
+    <p>
+        Only a few years ago, before the Internet era, swingers were essentially a secret society, meeting each other through dating magazines purchased at adult bookstores. Because of that, it was difficult to even guess at how many swingers there were.
+    </p>
 </ion-content>
